# make-gguf

./: .gitignore  Modelfile.template.txt  README.md  download_hf.py  pyproject.toml
