[tool.poetry]
name = "make-gguf"
version = "0.1.0"
description = ""
authors = ["ChihYu Yeh <chihyu.jimmy.yeh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.24.6"
numpy = "^2.1.0"
torch = "^2.4.0"
gguf = "^0.10.0"
transformers = "^4.44.2"
safetensors = "^0.4.4"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
